--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -65,25 +65,42 @@
     <Compile Include="UserData\Actions\Timeout.cs" />
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleRead.cs" />
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleWrite.cs" />
-    <Compile Include="UserData\UI\Html\Builders\AutoCompleteBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Builders\ButtonBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Builders\CrudOperationBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Builders\CrudOperationBuilderBase.cs" />
-    <Compile Include="UserData\UI\Html\Builders\DataSourceBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Builders\DropDownListBuilderBase.cs" />
-    <Compile Include="UserData\UI\Html\Builders\GridBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Builders\ListBuilderBase.cs" />
-    <Compile Include="UserData\UI\Html\Builders\PanelBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Builders\PanelBuilderTyped.cs" />
-    <Compile Include="UserData\UI\Html\Builders\PanelItemFactory.cs" />
-    <Compile Include="UserData\UI\Html\Builders\ReadOnlyDataSourceBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Builders\TextBoxBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Builders\WidgetBuilderBase.cs" />
-    <Compile Include="UserData\UI\Html\Builders\WidgetFactory.cs" />
-    <Compile Include="UserData\UI\Html\CrudOperation.cs" />
-    <Compile Include="UserData\UI\Html\DataSource.cs" />
-    <Compile Include="UserData\UI\Html\Extensions\DictionaryExtensions.cs" />
-    <Compile Include="UserData\UI\Html\Extensions\ObjectExtensions.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\AggregateFunction.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\AggregateDescriptor.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\AjaxDataSourceBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\AjaxDataSourceBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\AutoCompleteBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\ButtonBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\CrudOperationBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\CrudOperationBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceAggregateDescriptorFactory.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceFilterDescriptorFactory.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceModelDescriptorFactory.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceModelDescriptorFactoryBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\DropDownListBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\GridBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\ListBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\PanelBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\PanelBuilderTyped.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\PanelItemFactory.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\ReadOnlyDataSourceBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\TextBoxBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\WidgetBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\WidgetFactory.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\ClientHandlerDescriptor.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\CrudOperation.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceFilterDescriptorFactoryBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\ExpressionBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Extensions\DictionaryExtensions.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Extensions\ObjectExtensions.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Extensions\StringExtensions.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Infrastructure\FluentDictionary.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\DataSourceSchema.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\IDataKey.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\IGridDataKey.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\ModelFieldDescriptor.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\Transport.cs" />
     <Compile Include="UserData\UI\Html\Version1\DataAnnotations\DataFormViewAttribute.cs" />
     <Compile Include="UserData\UI\Html\Version1\DataAnnotations\EnumControlType.cs" />
     <Compile Include="UserData\UI\Html\Version1\Fluent\Widgets\Panels\TabFactory.cs" />
@@ -146,17 +163,19 @@
     <Compile Include="UserData\UI\Html\Version1\Widgets\Panels\Tab.cs" />
     <Compile Include="UserData\UI\Html\Version1\Widgets\Panels\TabsWidget.cs" />
     <Compile Include="UserData\UI\Html\Version1\Widgets\WidgetBase.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\AutoComplete.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\Button.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\DataSource.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\DataSourceType.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\DropDownListBase.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\Grid.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\JsonObject.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\ListBase.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\Panel.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\TextBox.cs" />
-    <Compile Include="UserData\UI\Html\Widgets\WidgetBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\IFilterDescriptor.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\ModelDescriptor.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Widgets\AutoComplete.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Widgets\Button.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\DataSource.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\DataSourceType.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Widgets\DropDownListBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Widgets\Grid.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Widgets\JsonObject.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Widgets\ListBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Widgets\Panel.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Widgets\TextBox.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Widgets\WidgetBase.cs" />
     <Compile Include="UserData\UserDataBase.cs" />
   </ItemGroup>
   <ItemGroup>
