--- a/UI/HtmlUIWidgets/HtmlUIWidgets.csproj
+++ b/UI/HtmlUIWidgets/HtmlUIWidgets.csproj
@@ -86,6 +86,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="UI\Html\Mvc\Builder\DataSourceBuilder.cs" />
+    <Compile Include="UI\Html\Mvc\Extensions\PanelExtension.cs" />
+    <Compile Include="UI\Html\Mvc\Extensions\TextBoxExtensions.cs" />
     <Compile Include="UI\Html\Version1\WidgetBuilder.cs" />
     <Compile Include="UI\Html\Version1\Widgets\Actions\NsAction.cs">
       <SubType>Code</SubType>
