--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -66,42 +66,48 @@
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleRead.cs" />
     <Compile Include="UserData\UI\Consola\UserDataActions\ConsoleWrite.cs" />
     <Compile Include="UserData\UI\Html\Mvc\AggregateFunction.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\AggregateDescriptor.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\AjaxDataSourceBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\AjaxDataSourceBuilderBase.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\AutoCompleteBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\ButtonBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\CrudOperationBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\CrudOperationBuilderBase.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceAggregateDescriptorFactory.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceFilterDescriptorFactory.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceModelDescriptorFactory.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceModelDescriptorFactoryBase.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\DropDownListBuilderBase.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\GridBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\ListBuilderBase.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\PanelBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\PanelBuilderTyped.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\PanelItemFactory.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\ReadOnlyDataSourceBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\TextBoxBuilder.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\WidgetBuilderBase.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\WidgetFactory.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\AggregateDescriptor.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\AjaxDataSourceBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\AjaxDataSourceBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\AutoCompleteBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\ButtonBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\ComboBoxBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\CrudOperationBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\CrudOperationBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\DataSourceAggregateDescriptorFactory.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\DataSourceBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\DataSourceFilterDescriptorFactory.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\DataSourceModelDescriptorFactory.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\DataSourceModelDescriptorFactoryBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\DatePickerBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\DatePickerBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\DropDownListBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\GridBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\ListBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\PanelBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\PanelBuilderTyped.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\PanelItemFactory.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\ReadOnlyDataSourceBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\TextBoxBuilder.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\WidgetBuilderBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\WidgetFactory.cs" />
     <Compile Include="UserData\UI\Html\Mvc\ClientHandlerDescriptor.cs" />
     <Compile Include="UserData\UI\Html\Mvc\CrudOperation.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Builders\DataSourceFilterDescriptorFactoryBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\Fluent\DataSourceFilterDescriptorFactoryBase.cs" />
     <Compile Include="UserData\UI\Html\Mvc\ExpressionBuilder.cs" />
     <Compile Include="UserData\UI\Html\Mvc\Extensions\DictionaryExtensions.cs" />
     <Compile Include="UserData\UI\Html\Mvc\Extensions\ObjectExtensions.cs" />
     <Compile Include="UserData\UI\Html\Mvc\Extensions\StringExtensions.cs" />
     <Compile Include="UserData\UI\Html\Mvc\Infrastructure\FluentDictionary.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\ComboBox.cs" />
     <Compile Include="UserData\UI\Html\Mvc\UI\DataSourceSchema.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\DatePicker.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\DatePickerBase.cs" />
     <Compile Include="UserData\UI\Html\Mvc\UI\IDataKey.cs" />
     <Compile Include="UserData\UI\Html\Mvc\UI\IGridDataKey.cs" />
     <Compile Include="UserData\UI\Html\Mvc\UI\ModelFieldDescriptor.cs" />
     <Compile Include="UserData\UI\Html\Mvc\UI\Transport.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Widgets\AutoComplete.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\AutoComplete.cs" />
     <Compile Include="UserData\UI\Html\Version1\DataAnnotations\DataFormViewAttribute.cs" />
     <Compile Include="UserData\UI\Html\Version1\DataAnnotations\EnumControlType.cs" />
     <Compile Include="UserData\UI\Html\Version1\Fluent\Widgets\Panels\TabFactory.cs" />
@@ -166,16 +172,16 @@
     <Compile Include="UserData\UI\Html\Version1\Widgets\WidgetBase.cs" />
     <Compile Include="UserData\UI\Html\Mvc\IFilterDescriptor.cs" />
     <Compile Include="UserData\UI\Html\Mvc\UI\ModelDescriptor.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Widgets\Button.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\Button.cs" />
     <Compile Include="UserData\UI\Html\Mvc\DataSource.cs" />
     <Compile Include="UserData\UI\Html\Mvc\DataSourceType.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Widgets\DropDownListBase.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Widgets\Grid.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Widgets\JsonObject.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Widgets\ListBase.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Widgets\Panel.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Widgets\TextBox.cs" />
-    <Compile Include="UserData\UI\Html\Mvc\Widgets\WidgetBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\DropDownListBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\Grid.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\JsonObject.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\ListBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\Panel.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\TextBox.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\WidgetBase.cs" />
     <Compile Include="UserData\UserDataBase.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -187,7 +193,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="UserData\UI\Html\Mvc\Widgets\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
