--- a/UI/HtmlUIWidgets/HtmlUIWidgets.csproj
+++ b/UI/HtmlUIWidgets/HtmlUIWidgets.csproj
@@ -91,6 +91,7 @@
     <Compile Include="UI\Html\Mvc\Extensions\DatePickerExtension.cs" />
     <Compile Include="UI\Html\Mvc\Extensions\PanelExtension.cs" />
     <Compile Include="UI\Html\Mvc\Extensions\TextBoxExtensions.cs" />
+    <Compile Include="UI\Html\Mvc\Widgets\NsLabel.cs" />
     <Compile Include="UI\Html\Version1\WidgetBuilder.cs" />
     <Compile Include="UI\Html\Version1\Widgets\Actions\NsAction.cs">
       <SubType>Code</SubType>
