--- a/UI/HtmlUIWeb/HtmlUIWeb.csproj
+++ b/UI/HtmlUIWeb/HtmlUIWeb.csproj
@@ -111,6 +111,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\kendo-bootstrap.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
