--- a/UI/HtmlUIWidgets/HtmlUIWidgets.csproj
+++ b/UI/HtmlUIWidgets/HtmlUIWidgets.csproj
@@ -89,7 +89,9 @@
     <Compile Include="UI\Html\Mvc\Extensions\ComboBoxExtension.cs" />
     <Compile Include="UI\Html\Mvc\Extensions\DataSourceExtension.cs" />
     <Compile Include="UI\Html\Mvc\Extensions\DatePickerExtension.cs" />
+    <Compile Include="UI\Html\Mvc\Extensions\LabelExtension.cs" />
     <Compile Include="UI\Html\Mvc\Extensions\PanelExtension.cs" />
+    <Compile Include="UI\Html\Mvc\Extensions\TabsExtension.cs" />
     <Compile Include="UI\Html\Mvc\Extensions\TextBoxExtensions.cs" />
     <Compile Include="UI\Html\Mvc\Widgets\NsLabel.cs" />
     <Compile Include="UI\Html\Version1\WidgetBuilder.cs" />
