--- a/UI/HtmlUIWidgets/HtmlUIWidgets.csproj
+++ b/UI/HtmlUIWidgets/HtmlUIWidgets.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{34B3DADC-D8B2-46DC-BA29-E80971D318F7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NeuroSystem.Workflow.UserData.UI.Html.ASP</RootNamespace>
-    <AssemblyName>NeuroSystem.Workflow.UserData.UI.Html.ASP</AssemblyName>
+    <RootNamespace>NeuroSystem.Workflow.UserData</RootNamespace>
+    <AssemblyName>NeuroSystem.Workflow.UserData</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
