--- a/UI/HtmlUIWidgets/HtmlUIWidgets.csproj
+++ b/UI/HtmlUIWidgets/HtmlUIWidgets.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Kendo.Mvc">
-      <HintPath>..\..\..\NeuroSystem9\lib\KENDOUIMVC\2016.2.714.545\Kendo.Mvc.dll</HintPath>
+      <HintPath>..\..\..\Lib\KENDOUIMVC\2016.2.714.545\Kendo.Mvc.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure">
       <HintPath>..\HtmlUIWeb\bin\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -81,7 +81,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Telerik.Web.UI">
-      <HintPath>..\..\..\..\..\..\..\BazaWiedzy\NeuroSystem9\NeuroSystem\lib\RCAJAX\Telerik.Web.UI.dll</HintPath>
+      <HintPath>..\..\..\Lib\RCAJAX\Telerik.Web.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
