--- a/Workflow/Workflow.csproj
+++ b/Workflow/Workflow.csproj
@@ -69,6 +69,7 @@
     <Compile Include="UserData\UI\Html\Mvc\AggregateFunction.cs" />
     <Compile Include="UserData\UI\Html\Mvc\DataAnnotations\DataFormViewAttribute.cs" />
     <Compile Include="UserData\UI\Html\Mvc\DataAnnotations\EnumControlType.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\DataAnnotations\EnumGridColumnVisibleMode.cs" />
     <Compile Include="UserData\UI\Html\Mvc\DataAnnotations\GridViewAttribute.cs" />
     <Compile Include="UserData\UI\Html\Mvc\ExpressionBuilder.cs" />
     <Compile Include="UserData\UI\Html\Mvc\Fluent\AggregateDescriptor.cs" />
@@ -112,6 +113,7 @@
     <Compile Include="UserData\UI\Html\Mvc\UI\DataSourceSchema.cs" />
     <Compile Include="UserData\UI\Html\Mvc\UI\DatePicker.cs" />
     <Compile Include="UserData\UI\Html\Mvc\UI\DatePickerBase.cs" />
+    <Compile Include="UserData\UI\Html\Mvc\UI\GridColumn.cs" />
     <Compile Include="UserData\UI\Html\Mvc\UI\IDataKey.cs" />
     <Compile Include="UserData\UI\Html\Mvc\UI\IGridDataKey.cs" />
     <Compile Include="UserData\UI\Html\Mvc\UI\Label.cs" />
